--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-web": "~0.19.10",
     "expo-dev-client": "~4.0.26",
     "expo-insights": "~0.7.0",
-    "expo-updates": "~0.25.24"
+    "expo-updates": "~0.25.24",
+    "expo-av": "~14.0.7",
+    "expo-asset": "~10.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
