--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "outDir": "./dist/",
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./*"]
+    },
+    "jsx": "react"
   },
   "include": [
+    "./src/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
