auth done andstart main page

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "fintech-app",
-    "slug": "fintech-app-lem7bm3h6alqzcqkmeg",
+    "slug": "fintech-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
