--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fintech-app-lem7bm3h6alqzcqkmeg",
+  "name": "fintech-app",
   "main": "expo-router/entry",
   "version": "51.0.46",
   "scripts": {
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "clean": "rm -rf .expo node_modules"
   },
   "jest": {
     "preset": "jest-expo"
@@ -17,8 +18,14 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.10",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-menu/menu": "^1.1.2",
     "@react-navigation/native": "^6.0.2",
+    "@rn-primitives/dropdown-menu": "^1.0.4",
+    "@rn-primitives/slot": "^1.0.4",
+    "@rn-primitives/types": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "expo": "~51.0.22",
     "expo-asset": "~10.0.10",
     "expo-av": "~14.0.7",
@@ -35,6 +42,7 @@
     "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
     "install": "^0.13.0",
+    "lucide-react-native": "^0.378.0",
     "nativewind": "^2.0.11",
     "npx": "^10.2.2",
     "react": "18.2.0",
@@ -46,7 +54,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
