--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "fintech-app",
-    "slug": "fintech-app",
+    "name": "fintech-app-lem7bm3h6alqzcqkmeg",
+    "slug": "fintech-app-lem7bm3h6alqzcqkmeg",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -31,7 +31,8 @@
     "plugins": [
       "expo-router",
       "expo-asset",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-build-properties"
     ],
     "experiments": {
       "typedRoutes": true
@@ -48,5 +49,18 @@
     "runtimeVersion": {
       "policy": "appVersion"
     }
-  }
+  },
+  "plugins": [
+    [
+      "expo-build-properties",
+      {
+        "ios": {
+          "newArchEnabled": true
+        },
+        "android": {
+          "newArchEnabled": true
+        }
+      }
+    ]
+  ]
 }
