--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo": "~51.0.22",
     "expo-asset": "~10.0.10",
     "expo-av": "~14.0.7",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.9",
@@ -51,15 +52,14 @@
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-mmkv": "^3.0.1",
+    "react-native-mmkv": "^2.12.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.5",
-    "expo-build-properties": "~0.12.5"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
