--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "expo-av": "~14.0.7",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.26",
+    "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
     "expo-insights": "~0.7.0",
     "expo-linking": "~6.3.1",
@@ -59,7 +59,8 @@
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.5",
+    "expo-blur": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
