--- a/app.json
+++ b/app.json
@@ -25,13 +25,19 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
       "expo-asset",
       "expo-secure-store",
+      [
+        "expo-router",
+        {
+          "origin": "http://localhost:8081/"
+        }
+      ],
       [
         "expo-build-properties",
         {
