--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@rn-primitives/dropdown-menu": "^1.0.4",
     "@rn-primitives/slot": "^1.0.4",
     "@rn-primitives/types": "^1.0.4",
+    "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "~51.0.22",
     "expo-asset": "~10.0.10",
     "expo-av": "~14.0.7",
+    "expo-blur": "~13.0.2",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
@@ -59,8 +61,7 @@
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.5",
-    "expo-blur": "~13.0.2"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -70,7 +71,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
   },
   "expo": {
