--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@rn-primitives/dropdown-menu": "^1.0.4",
     "@rn-primitives/slot": "^1.0.4",
     "@rn-primitives/types": "^1.0.4",
+    "@shopify/react-native-skia": "^1.4.1",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.22",
     "expo-asset": "~10.0.10",
     "expo-av": "~14.0.7",
@@ -35,6 +37,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
+    "expo-haptics": "~13.0.1",
     "expo-insights": "~0.7.0",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
@@ -61,6 +64,7 @@
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "victory-native": "^41.4.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
